--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,12 @@
+## Netlify configuration for the Instagram Link Manager
+[build]
+  command = "npm ci && npm run build"
+  publish = "build"
+  functions = "netlify/functions"
+
+[context.production.environment]
+  # Ensure Netlify uses Node 18 for production builds
+  NODE_VERSION = "18"
 [build]
   publish = "build"
   command = "npm run build"
